# R_Solver

./: .gitignore  CMakeLists.txt  Doxyfile  state_machine.drawio
src/: AlgorithmDataStorage.cpp  AlgorithmDataStorage.hpp  AlgorithmFactory.cpp  AlgorithmFactory.hpp  AlgorithmLayerOne.cpp  AlgorithmLayerOne.hpp  AlgorithmManager.cpp  AlgorithmManager.hpp  AlgorithmRefreshBorder.cpp  AlgorithmRefreshBorder.hpp  AlgorithmRefreshFace.cpp  AlgorithmRefreshFace.hpp  AlgorithmRefreshSections.cpp  AlgorithmRefreshSections.hpp  AlgorithmSimpleCorners.cpp  AlgorithmSimpleCorners.hpp  BitMask.cpp  BitMask.hpp  Buffer2D.cpp  Buffer2D.hpp  CMakeLists.txt  Grid.cpp  Grid.hpp  GridGenerator.cpp  GridGenerator.hpp  GridGeneratorFactory.cpp  GridGeneratorFactory.hpp  GridGeneratorFromHash.cpp  GridGeneratorFromHash.hpp  GridGeneratorUnsafe.cpp  GridGeneratorUnsafe.hpp  GridManager.cpp  GridManager.hpp  GridSelfGenerated.cpp  GridSelfGenerated.hpp  GridView.hpp  GridViewConsole.cpp  GridViewConsole.hpp  GridViewFactory.cpp  GridViewFactory.hpp  (+5 more)
src/algorithms/: Algorithm.cpp  Algorithm.hpp  AlgorithmDataStorage.cpp  AlgorithmDataStorage.hpp  AlgorithmDataTransfer.cpp  AlgorithmDataTransfer.hpp  AlgorithmExecutor.cpp  AlgorithmExecutor.hpp  AlgorithmFactory.cpp  AlgorithmFactory.hpp  AlgorithmLabels.hpp  AlgorithmLayerOne.cpp  AlgorithmLayerOne.hpp  AlgorithmLayerTwo.cpp  AlgorithmLayerTwo.hpp  AlgorithmManager.cpp  AlgorithmManager.hpp  AlgorithmMetrics.hpp  AlgorithmMetricsCollector.cpp  AlgorithmMetricsCollector.hpp  AlgorithmOptimizedSegments.cpp  AlgorithmOptimizedSegments.hpp  AlgorithmRefreshBorder.cpp  AlgorithmRefreshBorder.hpp  AlgorithmRefreshCombinations.cpp  AlgorithmRefreshCombinations.hpp  AlgorithmRefreshFace.cpp  AlgorithmRefreshFace.hpp  AlgorithmRefreshSections.cpp  AlgorithmRefreshSections.hpp  AlgorithmRefreshSegments.cpp  AlgorithmRefreshSegments.hpp  AlgorithmRefreshSubsegments.cpp  AlgorithmRefreshSubsegments.hpp  AlgorithmSafestMoveFromCombinations.cpp  AlgorithmSafestMoveFromCombinations.hpp  AlgorithmSimpleCorners.cpp  AlgorithmSimpleCorners.hpp  AlgorithmStatus.hpp  AlgorithmSureMovesFromCombinations.cpp  (+9 more)
src/algorithms/action/: AlgorithmAction.cpp  AlgorithmAction.hpp  AlgorithmCombinationsLeastRisky.cpp  AlgorithmCombinationsLeastRisky.hpp  AlgorithmCombinationsSafeMoves.cpp  AlgorithmCombinationsSafeMoves.hpp  AlgorithmFirstMove.cpp  AlgorithmFirstMove.hpp  AlgorithmGiveUp.cpp  AlgorithmGiveUp.hpp  AlgorithmLayerOne.cpp  AlgorithmLayerOne.hpp  AlgorithmLayerTwo.cpp  AlgorithmLayerTwo.hpp  AlgorithmSafestMoveFromCombinations.cpp  AlgorithmSafestMoveFromCombinations.hpp  AlgorithmSimpleActions.cpp  AlgorithmSimpleActions.hpp  AlgorithmSimpleCorners.cpp  AlgorithmSimpleCorners.hpp  AlgorithmSimpleQueue.cpp  AlgorithmSimpleQueue.hpp  AlgorithmSureMovesFromCombinations.cpp  AlgorithmSureMovesFromCombinations.hpp  CMakeLists.txt
src/algorithms/analysis/: AlgorithmAnalysis.cpp  AlgorithmAnalysis.hpp  AlgorithmBorder.cpp  AlgorithmBorder.hpp  AlgorithmCombinations.cpp  AlgorithmCombinations.hpp  AlgorithmCombinationsUtils.hpp  AlgorithmFace.cpp  AlgorithmFace.hpp  AlgorithmRefreshBorder.cpp  AlgorithmRefreshBorder.hpp  AlgorithmRefreshCombinations.cpp  AlgorithmRefreshCombinations.hpp  AlgorithmRefreshFace.cpp  AlgorithmRefreshFace.hpp  AlgorithmRefreshSections.cpp  AlgorithmRefreshSections.hpp  AlgorithmRefreshSegments.cpp  AlgorithmRefreshSegments.hpp  AlgorithmRefreshSubsegments.cpp  AlgorithmRefreshSubsegments.hpp  (+7 more)
src/app/: CMakeLists.txt  main.cpp
src/generators/: CMakeLists.txt  Generator.cpp  Generator.hpp  GeneratorCommon.cpp  GeneratorCommon.hpp  GeneratorExternal.cpp  GeneratorExternal.hpp  GeneratorFactory.cpp  GeneratorFactory.hpp  GeneratorIf.hpp  GeneratorImpl.cpp  GeneratorImpl.hpp  GeneratorInternal.cpp  GeneratorInternal.hpp  GeneratorLoadState.cpp  GeneratorLoadState.hpp  GeneratorRandom.cpp  GeneratorRandom.hpp  GeneratorRandomGuaranteedOpening.cpp  GeneratorRandomGuaranteedOpening.hpp  GeneratorRandomSafe.cpp  GeneratorRandomSafe.hpp  GeneratorRandomUnsafe.cpp  GeneratorRandomUnsafe.hpp  GeneratorType.hpp  GridGenerator.cpp  GridGenerator.hpp  GridGeneratorFactory.cpp  GridGeneratorFactory.hpp  GridGeneratorFromHash.cpp  GridGeneratorFromHash.hpp  GridGeneratorSafe.cpp  GridGeneratorSafe.hpp  GridGeneratorUnsafe.cpp  GridGeneratorUnsafe.hpp  GridInternalGenerator.cpp  GridInternalGenerator.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp
src/grid/: CMakeLists.txt  FieldType.hpp  Grid.cpp  Grid.hpp  GridAccessCommonIf.hpp  GridAccessGeneratorIf.hpp  GridAccessPlayerIf.hpp  GridAccessReadIf.hpp  GridAccessViewIf.hpp  GridAccessWriteIf.hpp  GridAlgorithmActionIf.hpp  GridAlgorithmAnalysisIf.hpp  GridAlgorithmIf.hpp  GridCommonIf.hpp  GridDimensions.cpp  GridDimensions.hpp  GridGeneratorIf.hpp  GridHash.cpp  GridHash.hpp  GridImpl.cpp  GridImpl.hpp  GridInternal.cpp  GridInternal.hpp  GridInternalImpl.cpp  GridInternalImpl.hpp  GridManager.cpp  GridManager.hpp  GridSelfGenerated.cpp  GridSelfGenerated.hpp  GridViewIf.hpp
src/metrics/: AlgorithmMetrics.cpp  AlgorithmMetrics.hpp  AlgorithmMetricsCollector.hpp  CMakeLists.txt  Metrics.cpp  Metrics.hpp
src/solver/: CMakeLists.txt  Solver.cpp  Solver.hpp  SolverThreadData.cpp  SolverThreadData.hpp
src/statistics/: CMakeLists.txt  StatisticsAggregator.cpp  StatisticsAggregator.hpp  StatisticsCollector.cpp  StatisticsCollector.hpp  StatisticsLabels.cpp  StatisticsLabels.hpp  StatisticsProducer.cpp  StatisticsProducer.hpp  StatisticsStructs.hpp
src/tests/: CMakeLists.txt  TestsTemplate.cpp  UnitTestEnv.hpp  UnitTestRunner.cpp
src/utils/: BigNum.cpp  BigNum.hpp  BitMask.cpp  Buffer.cpp  Buffer.hpp  Buffer2D.cpp  Buffer2D.hpp  CMakeLists.txt  CachedVector.cpp  CachedVector.hpp  ExampleClass.cpp  ExampleClass.hpp  Label.hpp  Logger.cpp  Logger.hpp  ValueTable.cpp  ValueTable.hpp
src/view/: CMakeLists.txt  GridView.cpp  GridView.hpp  GridViewConsole.cpp  GridViewConsole.hpp  GridViewFactory.hpp  ViewConsole.cpp  ViewConsole.hpp  ViewFactory.cpp  ViewFactory.hpp  ViewIf.hpp  ViewType.hpp
(+204 files in other folders)
